--- a/404.html
+++ b/404.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contactactate con nostros"> 
-    <meta name="keywords" content="contacto">
-    <title>New York</title>
-    <title>Contacto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <meta name="description" content="Somos una guia para viajeros"> 
+    <meta name="keywords" content="viajeros, mi guia de viajes, blog de viajes, guia de viajes, viaje a tailandia, turismo mexico, viajar, consejos viaje, viaje y turismo">
+    <title>Error 404 - Not found</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../ccs/style.css">
-    
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
+              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo-viajeros" class="logo-tamaño"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -46,28 +44,11 @@
             </div>
           </nav>
     </header>
-    <div class="web-background mas-leidos">
-        <h2>Contacto</h2>
-        <div class="row container form-styles"> 
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="mb-3"> 
-                    <label for="exampleFormControlInput1" class="form-label">Nombre y apellido</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese nombre y apellido">
-                </div>
-                <div class="mb-3"> 
-                    <label for="exampleFormControlInput1" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su email">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Ingrese su mensaje" rows="3"></textarea>
-                </div>
-                <button type="button" class="btn btn-outline-info">Enviar</button>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 mapa">
-                <img src="../img/mapa.jpg" alt="mapa">
-            </div>
-        </div>
+    <div class="web-background container mas-leidos">
+        <section>
+            <h2>¡Error 404 Not found!</h2>
+            <h4>La página que estas buscando no ha sido encontrada</h4>
+        </section>
         <br>
     </div>
     <footer>
