--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="pages/quienes-somos.html">Quienes somos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="pages/quienes-somos.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -97,32 +97,32 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares amsterdam">
-                        <h3><a href="pages/destino-amsterdam.html">Asterdam</a></h3>
+                        <h3><a href="pages/destinos-carpeta/destino-amsterdam.html">Asterdam</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares mexico">
-                        <h3> <a href="pages/destino-mexico.html">Mexico</a> </h3>
+                        <h3> <a href="pages/destinos-carpeta/destino-mexico.html">Mexico</a> </h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares new-york">
-                        <h3><a href="pages/destino-new-york.html">New York</a></h3>
+                        <h3><a href="pages/destinos-carpeta/destino-new-york.html">New York</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares republica-dominicana">
-                        <h3><a href="pages/destino-cuba.html">Cuba</a> </h3>
+                        <h3><a href="pages/destinos-carpeta/destino-cuba.html">Cuba</a> </h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares tailandia">
-                        <h3><a href="pages/destino-tailandia.html">Tailandia</a></h3>
+                        <h3><a href="pages/destinos-carpeta/destino-tailandia.html">Tailandia</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares japon">
-                        <h3><a href="pages/destino-japon.html">Japon</a></h3>
+                        <h3><a href="pages/destinos-carpeta/destino-japon.html">Japon</a></h3>
                     </div>
                 </div>
                
@@ -133,31 +133,37 @@
             <h2>Más Leídos</h2>
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" >
+                  <a href="pages/blog-carpeta/pirineos.html" class="tarjeta">
+                    <div class="card" >
                       <img src="img/nieve.jpg" class="card-img-top" alt="blog-pirineos">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
                         <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
                       </div>
                     </div>
+                  </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" >
+                  <a href="pages/blog-carpeta/argentina.html" class="tarjeta">
+                    <div class="card" >
                       <img src="img/bosque.jpg" class="card-img-top" alt="blog-bosque">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
                         <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
                       </div>
                     </div>
+                  </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" >
+                  <a href="pages/blog-carpeta/fiyi.html" class="tarjeta">
+                   <div class="card" >
                       <img src="img/paraiso.jpg" class="card-img-top" alt="blog-playas">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
                         <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
                       </div>
                     </div>
+                  </a>
                 </div>
             </div>
             <br>
@@ -165,13 +171,12 @@
         <br>
     </div>
 <footer>
-    <img src="img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
-    <img src="img/gmail.png" class="footer-img"alt="gmail" >
-    <img src="img/facebook.png" class="footer-img"alt="facebook">
-    <img src="img/instagram.png" class="footer-img"alt="instagram" >
-    <img src="img/whatsapp.png" class="footer-img"  alt="whatsapp" >
-    <br>
-    &copy; Todos los derechos reservados
+    <img src="img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
+    <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="img/gmail.png" class="footer-img"alt="gmail" ></a>
+    <a href="https://es-la.facebook.com/viajerosweb/"><img src="img/facebook.png" class="footer-img"alt="facebook"></a>
+    <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="img/instagram.png" class="footer-img"alt="instagram" ></a>
+    <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+    <p class="copy">&copy; Todos los derechos reservados</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
