--- a/pages/blog.html
+++ b/pages/blog.html
@@ -49,73 +49,85 @@
             <h2>BLOG</h2>
             <div class="row">
               <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card" >
+                <a href="../pages/blog-carpeta/pirineos.html" class="tarjeta">
+                  <div class="card" >
                     <img src="../img/nieve.jpg" class="card-img-top" alt="blog-pirineos">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
                       <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
                     </div>
                   </div>
+                </a>  
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card" >
-                    <img src="../img/bosque.jpg" class="card-img-top" alt="blog-bosque">
-                    <div class="card-body">
-                      <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
-                      <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
+                <a href="../pages/blog-carpeta/argentina.html" class="tarjeta">
+                  <div class="card" >
+                      <img src="../img/bosque.jpg" class="card-img-top" alt="blog-bosque">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
+                        <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
+                      </div>
                     </div>
-                  </div>
-              </div>
+                  </a>
+                </div>
+              </a>
               <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card" >
+                <a href="../pages/blog-carpeta/fiyi.html" class="tarjeta">
+                 <div class="card" >
                     <img src="../img/paraiso.jpg" class="card-img-top" alt="blog-playa">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
                       <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
                     </div>
                   </div>
+                </a>
               </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" >
+                  <a href="../pages/blog-carpeta/castillosespaña.html" class="tarjeta">
+                    <div class="card" >
                       <img src="../img/castilloespaña.jpg" class="card-img-top" alt="Castillos españa">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Los castillos mas espectaculares de España</h5>
                         <p class="card-text">Castillo de Loarre, Huesca El reino de los cielos está en Aragón Cual nido de águila encima de un peñón rocoso que domina la llanura de la Hoya de Huesca, este espectacular castillo medieval del s. XI está considerado uno de los más bellos del mundo.</p>
                     </div>
+                  </a>
                 </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" >
+                  <a href="../pages/blog-carpeta/comidastipicaschinas.html" class="tarjeta">
+                    <div class="card" >
                       <img src="../img/comidachina.jpg" class="card-img-top" alt="Comidachina">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Comidas tipicas chinas</h5>
                         <p class="card-text">Si has tenido la oportunidad de viajar a China, sabrás que la gastronomía china es mucho más que un arroz tres delicias o un rollito de primavera. De hecho, es excepcionalmente rica en matices y tan amplia como la extensión del país. ¿Eres de paladar viajero? Hoy te contamos 7 curiosidades de una de las cocinas más antiguas del mundo.</p>
                       </div>
                     </div>
+                  </a>  
                 </div>
-                <div class="col">
-                  <div class="card">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                  <a href="../pages/blog-carpeta/playasbrasil.html" class="tarjeta">
+                    <div class="card">
                       <img src="../img/playaparadisiaca.jpg" class="card-img-top" alt="playaparadisiaca">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">10 playas de brasil mas visitadas</h5>
                         <p class="card-text">Varias de las playas más espectaculares de este planeta están en Brasil. Por todo el litoral hay islas idílicas, animadas playas urbanas y arenales en plena selva. Las hay desconocidas y también muy frecuentadas, arboladas o desérticas, relajadas o muy activas. Pero todas tienen un denominador común: ¡se merecen un viaje! Estas son algunas de las playas más paradisíacas de Brasil (y del mundo).</p>
                       </div>
                     </div>
+                  </a>
                 </div>
               </div>
         </div>
-<footer>
-    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
-    <img src="../img/gmail.png" class="footer-img"alt="gmail" >
-    <img src="../img/facebook.png" class="footer-img"alt="facebook">
-    <img src="../img/instagram.png" class="footer-img"alt="instagram" >
-    <img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" >
-    <br>
-    &copy; Todos los derechos reservados
-</footer>
+        <footer>
+          <img src="../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
+          <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../img/gmail.png" class="footer-img"alt="gmail" ></a>
+          <a href="https://es-la.facebook.com/viajerosweb/"><img src="../img/facebook.png" class="footer-img"alt="facebook"></a>
+          <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../img/instagram.png" class="footer-img"alt="instagram" ></a>
+          <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+          <p class="copy">&copy; Todos los derechos reservados</p> 
+      </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
