--- a/pages/destinos-carpeta/destino-new-york.html
+++ b/pages/destinos-carpeta/destino-new-york.html
@@ -12,33 +12,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ccs/style.css">
+    <link rel="stylesheet" href="../../ccs/style.css">
     
 </head>
 <body>
   <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand main-logo" href="#"> <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño"></a>
+            <a class="navbar-brand main-logo" href="#"> <img src="../../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="destinos.html">Destinos</a>
+                  <a class="nav-link" href="../destinos.html">Destinos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html">Blog</a>
+                  <a class="nav-link" href="../blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+                  <a class="nav-link" href="../quienes-somos.html">Quienes somos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
+                  <a class="nav-link" href="../contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -51,7 +51,7 @@
       <div class="principal-new-york">
 
         <h2>Bienvenidos a Nueva York</h2>
-
+        <div><img src="../../img/neryorkpagina.jpg" alt="vista-new-york"></div>
         <p>Epicentro de las artes, capital gastronómica y comercial, marcadora de tendencias... Nueva York ostenta muchas coronas y despliega su gran fiesta para todos. Con una oferta de ocio casi infinita, la ciudad que no duerme invita a zambullirse en ella: basta salir a la calle y dejarse llevar, de día o de noche.</p>
     
       </div>
@@ -106,14 +106,13 @@
     </div>       
   </div>
   <footer>
-      <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
-      <img src="../img/gmail.png" class="footer-img"alt="gmail" >
-      <img src="../img/facebook.png" class="footer-img"alt="facebook">
-      <img src="../img/instagram.png" class="footer-img"alt="instagram" >
-      <img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" >
-      <br>
-      &copy; Todos los derechos reservados
-  </footer>
+    <img src="../../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
+    <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../../img/gmail.png" class="footer-img"alt="gmail" ></a>
+    <a href="https://es-la.facebook.com/viajerosweb/"><img src="../../img/facebook.png" class="footer-img"alt="facebook"></a>
+    <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../../img/instagram.png" class="footer-img"alt="instagram" ></a>
+    <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+    <p class="copy">&copy; Todos los derechos reservados</p>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
