--- a/pages/destinos-carpeta/destino-amsterdam.html
+++ b/pages/destinos-carpeta/destino-amsterdam.html
@@ -12,21 +12,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ccs/style.css">
+    <link rel="stylesheet" href="../../ccs/style.css">
     
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
+              <a class="navbar-brand main-logo" href="#"> <img src="../../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="destinos.html">Destinos</a>
@@ -50,6 +50,7 @@
       <div class="div-amsterdam">
         <div class="principal-amsterdam">
           <h2>Bienvenidos a Ámsterdam</h2>
+          <div><img src="../../img/amsterdampagina.jpg" alt="vista-amsterdam"></div>
           <p>Ámsterdam despliega su patrimonio nacional en la fascinante arquitectura de los canales, los museos repletos de obras de grandes maestros clásicos, los locales de degustación de jene-ver (ginebra holandesa) y los bruin cafés (pubs tradicionales holandeses). Sin embargo, alberga también una increíble diversidad de culturas y cocinas junto con algunos de los locales nocturnos más rompedores de Europa.</p> 
           <h3>Cuándo ir a Ámsterdam</h3>
           <div class="row">
@@ -94,15 +95,14 @@
         </div>               
       </div>
     </div>
-<footer>
-    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
-    <img src="../img/gmail.png" class="footer-img"alt="gmail" >
-    <img src="../img/facebook.png" class="footer-img"alt="facebook">
-    <img src="../img/instagram.png" class="footer-img"alt="instagram" >
-    <img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" >
-    <br>
-    &copy; Todos los derechos reservados
-</footer>
+    <footer>
+      <img src="../../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
+      <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../../img/gmail.png" class="footer-img"alt="gmail" ></a>
+      <a href="https://es-la.facebook.com/viajerosweb/"><img src="../../img/facebook.png" class="footer-img"alt="facebook"></a>
+      <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../../img/instagram.png" class="footer-img"alt="instagram" ></a>
+      <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+      <p class="copy">&copy; Todos los derechos reservados</p>
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
