--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -50,47 +50,46 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares amsterdam">
-                      <h3><a href="destino-amsterdam.html">Asterdam</a></h3>
+                      <h3><a href="destinos-carpeta/destino-amsterdam.html">Asterdam</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares mexico">
-                      <h3><a href="destino-amsterdam.html">Mexico</a></h3>
+                      <h3><a href="destinos-carpeta/destino-mexico.html">Mexico</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares new-york">
-                      <h3><a href="destino-amsterdam.html">New York</a></h3>
+                      <h3><a href="destinos-carpeta/destino-new-york.html">New York</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares republica-dominicana">
-                      <h3><a href="destino-amsterdam.html">Cuba</a></h3>
+                      <h3><a href="destinos-carpeta/destino-cuba.html">Cuba</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares tailandia">
-                      <h3><a href="destino-amsterdam.html">Tailandia</a></h3>
+                      <h3><a href="destinos-carpeta/destino-tailandia.html">Tailandia</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares japon">
-                      <h3><a href="destino-amsterdam.html">Japon</a></h3>
+                      <h3><a href="destinos-carpeta/destino-japon.html">Japon</a></h3>
                     </div>
                 </div>
                
             </div>
           </div>
     </div>
-<footer>
-    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
-    <img src="../img/gmail.png" class="footer-img"alt="gmail" >
-    <img src="../img/facebook.png" class="footer-img"alt="facebook">
-    <img src="../img/instagram.png" class="footer-img"alt="instagram" >
-    <img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" >
-    <br>
-    &copy; Todos los derechos reservados
-</footer>
+    <footer>
+      <img src="../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
+      <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../img/gmail.png" class="footer-img"alt="gmail" ></a>
+      <a href="https://es-la.facebook.com/viajerosweb/"><img src="../img/facebook.png" class="footer-img"alt="facebook"></a>
+      <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../img/instagram.png" class="footer-img"alt="instagram" ></a>
+      <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+      <p class="copy">&copy; Todos los derechos reservados</p>
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
