--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -51,15 +51,14 @@
         </section>
         <br>
     </div>
-<footer>
-    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
-    <img src="../img/gmail.png" class="footer-img"alt="gmail" >
-    <img src="../img/facebook.png" class="footer-img"alt="facebook">
-    <img src="../img/instagram.png" class="footer-img"alt="instagram" >
-    <img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" >
-    <br>
-    &copy; Todos los derechos reservados
-</footer>
+    <footer>
+      <img src="../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
+      <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../img/gmail.png" class="footer-img"alt="gmail" ></a>
+      <a href="https://es-la.facebook.com/viajerosweb/"><img src="../img/facebook.png" class="footer-img"alt="facebook"></a>
+      <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../img/instagram.png" class="footer-img"alt="instagram" ></a>
+      <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+      <p class="copy">&copy; Todos los derechos reservados</p>
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
