--- a/pages/blog.html
+++ b/pages/blog.html
@@ -44,7 +44,7 @@
         </div>
       </nav>
     </header>
-
+      <div class="web-background">
         <div class="container mas-leidos">
             <h2>BLOG</h2>
             <div class="row">
@@ -120,6 +120,7 @@
                 </div>
               </div>
         </div>
+      </div>
         <footer>
           <img src="../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
           <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../img/gmail.png" class="footer-img"alt="gmail" ></a>
