--- a/pages/destinos-carpeta/destino-amsterdam.html
+++ b/pages/destinos-carpeta/destino-amsterdam.html
@@ -29,16 +29,16 @@
                     <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="destinos.html">Destinos</a>
+                    <a class="nav-link" href="../destinos.html">Destinos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
+                    <a class="nav-link" href="../blog.html">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+                    <a class="nav-link" href="../quienes-somos.html">Quienes somos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="../contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -46,11 +46,10 @@
           </nav>
     </header>
     <div class="web-background mas-leidos pag-mexico">
-      <div class="img-principal "></div>
       <div class="div-amsterdam">
+        <h2>Bienvenidos a Ámsterdam</h2>
         <div class="principal-amsterdam">
-          <h2>Bienvenidos a Ámsterdam</h2>
-          <div><img src="../../img/amsterdampagina.jpg" alt="vista-amsterdam"></div>
+          <div><img src="../../img/amsterdampagina.jpg" alt="vista-amsterdam" class="img-vista"></div>
           <p>Ámsterdam despliega su patrimonio nacional en la fascinante arquitectura de los canales, los museos repletos de obras de grandes maestros clásicos, los locales de degustación de jene-ver (ginebra holandesa) y los bruin cafés (pubs tradicionales holandeses). Sin embargo, alberga también una increíble diversidad de culturas y cocinas junto con algunos de los locales nocturnos más rompedores de Europa.</p> 
           <h3>Cuándo ir a Ámsterdam</h3>
           <div class="row">
