--- a/pages/destinos-carpeta/destino-japon.html
+++ b/pages/destinos-carpeta/destino-japon.html
@@ -46,12 +46,10 @@
           </nav>
     </header>
     <div class="web-background mas-leidos pag-mexico">
-      <div class="img-principal "></div>
       <div class="div-japon">
+        <h2> Bienvenidos a Japón</h2>
         <div class="principal-japon">
-
-          <h2> Bienvenidos a Japón</h2>
-          <div><img src="../../img/japonpagina.jpg" alt="vista-japon"></div>
+          <div><img src="../../img/japonpagina.jpg" alt="vista-japon" class="img-vista"></div>
           <p></p> Japón es realmente un lugar eterno, donde las antiguas tradiciones se fusionan con la vida moderna de la manera más natural del mundo.
 
           <h4>Cultura tradicional</h4>
