--- a/pages/destinos-carpeta/destino-mexico.html
+++ b/pages/destinos-carpeta/destino-mexico.html
@@ -46,11 +46,10 @@
         </nav>
   </header>
   <div class="web-background mas-leidos pag-mexico">
-      <div class="img-principal "></div>
       <div class="div-mexico">
+        <h2> Bienvenidos a México</h2>
         <div class="principal-mexico">
-          <h2> Bienvenidos a México</h2>
-          <div><img src="../../img/maxicopagina.jpg" alt="vista-mexico"></div>
+          <div><img src="../../img/maxicopagina.jpg" alt="vista-mexico" class="img-vista"></div>
           <p> Playas de palmeras, comida picante, selvas húmedas, ciudades enormes, fuegos artificiales, la angustia de Frida... México evoca vívidos sueños. Y la realidad colma las expectativas.</p>
 
           <h4> Vida al aire libre</h4>
