--- a/pages/destinos-carpeta/destino-new-york.html
+++ b/pages/destinos-carpeta/destino-new-york.html
@@ -46,12 +46,10 @@
         </nav>
   </header>
   <div class="web-background mas-leidos pag-new-york">
-    <div class="img-principal "></div>
     <div class="div-new-york ">
+      <h2>Bienvenidos a Nueva York</h2>
       <div class="principal-new-york">
-
-        <h2>Bienvenidos a Nueva York</h2>
-        <div><img src="../../img/neryorkpagina.jpg" alt="vista-new-york"></div>
+        <div><img src="../../img/neryorkpagina.jpg" alt="vista-new-york" class="img-vista"></div>
         <p>Epicentro de las artes, capital gastronómica y comercial, marcadora de tendencias... Nueva York ostenta muchas coronas y despliega su gran fiesta para todos. Con una oferta de ocio casi infinita, la ciudad que no duerme invita a zambullirse en ella: basta salir a la calle y dejarse llevar, de día o de noche.</p>
     
       </div>
