--- a/pages/destinos-carpeta/destino-tailandia.html
+++ b/pages/destinos-carpeta/destino-tailandia.html
@@ -46,12 +46,10 @@
         </nav>
     </header>
     <div class="web-background mas-leidos pag-tailandia">
-        <div class="img-principal "></div>
         <div class="div-tailandia">
-          <div class="principal-tailandia">
-        
           <h2>Bienvenidos a Tailandia</h2>
-            <div><img src="../../img/tailandiapagina.jpg" alt="vista-tailandia"></div>
+          <div class="principal-tailandia">
+          <div><img src="../../img/tailandiapagina.jpg" alt="vista-tailandia" class="img-vista"></div>
           <p> Acogedora y festiva, culta e histórica, Tailandia ofrece mil atractivos, desde llamativos templos y playas tropicales hasta la siempre reconfortante sonrisa de su gente.</p>
 
           <h4>Arena entre los dedos</h4>
