--- a/pages/destinos-carpeta/destino-cuba.html
+++ b/pages/destinos-carpeta/destino-cuba.html
@@ -47,11 +47,10 @@
           </nav>
     </header>
     <div class="web-background mas-leidos pag-mexico">
-        <div class="img-principal "></div>
-        <h2>Bienvenidos a Cuba</h2>
         <div class="div-cuba">
+          <h2>Bienvenidos a Cuba</h2>
           <div class="principal-cuba">
-            <div><img src="../../img/cubapagina.jpg" alt="vista-cuba"></div>
+            <div><img src="../../img/cubapagina.jpg" alt="vista-cuba" class="img-vista"></div>
             <p> Deteriorada pero majestuosa, decrépita pero digna, divertida y exasperante a la vez, Cuba posee una magia indefinible.
         
             <h4>Esperar lo inesperado</h4>
@@ -102,12 +101,17 @@
         </div>
       </div>
       <footer>
-        <img src="../../img/logo-viajeros.png" class="logo-footer"alt="logo-footer" >    
-        <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../../img/gmail.png" class="footer-img"alt="gmail" ></a>
-        <a href="https://es-la.facebook.com/viajerosweb/"><img src="../../img/facebook.png" class="footer-img"alt="facebook"></a>
-        <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../../img/instagram.png" class="footer-img"alt="instagram" ></a>
-        <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
-        <p class="copy">&copy; Todos los derechos reservados</p>
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <img src="../../img/logo-viajeros.png" class="logo-footer"alt="logo-footer">    
+            <p class="copy">&copy; Todos los derechos reservados</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <a href="mailto:antonellavaleriagarcia@gmail.com"><img src="../../img/gmail.png" class="footer-img"alt="gmail" ></a>
+            <a href="https://es-la.facebook.com/viajerosweb/"><img src="../../img/facebook.png" class="footer-img"alt="facebook"></a>
+            <a href="https://www.instagram.com/tanviajeros/?hl=es-la"><img src="../../img/instagram.png" class="footer-img"alt="instagram" ></a>
+            <a href="https://wa.me/5493413754282?text=Me%20encanta%20viajar"><img src="../../img/whatsapp.png" class="footer-img"  alt="whatsapp" ></a>
+          </div>
+          
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
